# pydantic-identity

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
pydantic_identity/: __init__.py  main.py  report.py  utils.py
tests/: test_main.py
